<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.apppreguntas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_quest"
        android:name="com.example.apppreguntas.ui.test.TestFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_tests" >
    </fragment>

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.example.apppreguntas.ui.ajustes.AjustesFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@layout/fragment_ajustes" />



</navigation>