<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.test.TestFragment">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblTestAjustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="@string/ajustes_title_test"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nombre_categoria"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtNomCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Mi cuestionario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnCrearTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="src_over"
            android:onClick="goCreateCategoria"
            android:padding="10dp"
            android:text="@string/crear" />

        <TextView
            android:id="@+id/lblModTestAjustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingVertical="20dp"
            android:text="@string/ajustes_title_mod_tets"
            android:textAlignment="center"
            android:textSize="27sp" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/borde_redondo_btn"
            android:contentDescription="@string/seleccione_categoria"
            android:foregroundTint="#3C3C3C"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textSize="14sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnModCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:text="@string/ajustes_mod_test" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>