<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/blue_sapphire"
    android:backgroundTint="@color/blue_sapphire"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:background="@color/blue_sapphire"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:background="@color/blue_sapphire"
            android:elevation="50dp"
            app:srcCompat="@mipmap/ic_login_foreground"
            android:contentDescription="@string/todo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbEmail2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:background="@drawable/borde_redondo_input"
                    android:ems="10"
                    android:hint="@string/example_gmail_com"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:textAlignment="center"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/lbPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/txtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:autofillHints=""
                    android:background="@drawable/borde_redondo_input"
                    android:ems="10"
                    android:hint="@string/hintPas"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:shadowColor="#9C27B0"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/borde_redondo_btn"
                    android:onClick="login"
                    android:paddingVertical="15dp"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:minHeight="48dp"
                    android:onClick="goRegister"
                    android:text="@string/no_tienes_cuenta"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarLogin"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>