<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/blue_sapphire"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewRegister"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:elevation="50dp"
            app:srcCompat="@mipmap/ic_login_foreground"
            android:contentDescription="TODO" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/nombre"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:autofillHints=""
                    android:background="@drawable/borde_redondo_input"
                    android:ems="10"
                    android:hint="@string/nameHint"
                    android:inputType="text"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:textAlignment="center"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/lbEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/txtEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:autofillHints=""
                    android:background="@drawable/borde_redondo_input"
                    android:ems="10"
                    android:hint="@string/example_gmail_com"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:textAlignment="center"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/lbPassRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/contrasena"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/txtPassRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:autofillHints=""
                    android:background="@drawable/borde_redondo_input"
                    android:ems="10"
                    android:hint="@string/hintPas"
                    android:inputType="textPassword"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:shadowColor="#9C27B0"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/borde_redondo_btn"
                    android:backgroundTint="@color/light_grey"
                    android:onClick="registrar"
                    android:paddingVertical="15dp"
                    android:text="@string/registrar" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:minHeight="48dp"
                    android:onClick="goLogin"
                    android:text="@string/ya_tienes_cuenta"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarRegister"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>